# synthora

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  Makefile  README.md  agent_tutorial.ipynb  demo2.py  main.py  mypy.ini  prompts.py  pyproject.toml  pytest.ini  tools.py  whatsapp.py
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.md  modules.rst  synthora.agents.rst  synthora.callbacks.rst  synthora.configs.rst  synthora.memories.rst  synthora.messages.rst  synthora.models.rst  synthora.prompts.buildin.rst  synthora.prompts.rst  synthora.retrievers.rst  synthora.rst  synthora.services.rst  synthora.toolkits.file_toolkits.rst  synthora.toolkits.rst  synthora.toolkits.search_toolkits.rst  synthora.tracers.rst  synthora.triggers.rst  synthora.types.rst  synthora.utils.rst  synthora.workflows.buildins.rst  synthora.workflows.context.rst  synthora.workflows.rst  synthora.workflows.scheduler.rst  tutorial.config.md
docs/source/cookbook/: advanced_workflow.ipynb  chat_with_agent.ipynb  data_generation.ipynb  multi_agent.ipynb  workflow.ipynb
docs/source/modules/: callback.md  config.md  memory.md  message.md  model.md  prompt.md  result.md  service.md  toolkit.md  tracer.md
docs/source/modules/agent/: base.md  cot.md  index.rst  react.md  tot.md  vanilla.md
docs/source/modules/workflow/: context.md  index.rst  scheduler.md  task.md
docs/source/start/: firststep.md  installation.md  intro.md
docs/source/tutorial/: agent_config.md  callback.md  config.md  message.md  workflow.md
examples/agents/: async_react_agent.py  async_vanilla_agent.py  cot_agent.py  default_agent.py  react_agent_with_callbacks.py  response_format.py  tot_agent.py  vanilla_agent.py  vanilla_agent_with_callbacks.py
examples/agents/configs/: basic_agent.yaml  basic_model.yaml  basic_react_agent.yaml  react_agent.yaml  vanilla_agent.yaml  vanilla_agent_without_tools.yaml
examples/code_automations/: blocks_example.py  chat_mode.py  hard_task.py  real_task.py
examples/configs/: agent_config.py  agent_config_from_dict.py  model_config.py
examples/configs/configs/: basic_agent.yaml  basic_model.yaml  vanilla_agent.yaml
examples/memories/: default_memory.py  recent_n_memory.py  summary_memory.py
examples/memories/configs/: basic_agent.yaml  basic_model.yaml  basic_react_agent.yaml  react_agent.yaml  vanilla_agent.yaml  vanilla_agent_without_tools.yaml
examples/messages/: basic_messages.py  simple_message_create.py
examples/models/: default.py
examples/prompts/: prompt_format.py
examples/service/: discord_bot.py  http_service.py  slack_bot.py
examples/toolkits/: get_schema.py  search.py  search_wiki.py  slides.py  user_defined_tools.py  weather.py  webpage.py
examples/tracers/: result.json  server.py  simple_tracer.py
examples/trigger/: apscheduler_trigger.py  cron_trigger.py  date_trigger.py  time_trigger.py
examples/workflows/: basic_context.py  create_tasks.py  data_generation.py  dpo_data_generation.py  financial_assistant.py  loop.py  marine_data.py  multi_process_tasks.py  multiprocess_context.py  multithread_context.py  role_playing.py  skip_task.py  tasks.py  tasks2.py
examples/workflows/configs/: basic_agent.yaml  basic_model.yaml  react_agent.yaml  vanilla_agent.yaml
examples/workflows/data/: results.jsonl
licenses/: license_template.txt
src/fussion/configs/: model_config.py  tool_config.py
src/fussion/toolkits/: base.py
src/fussion/toolkits/search_toolkits/: wikipidia.py
src/synthora/: __init__.py
src/synthora/agents/: __init__.py  base.py  react_agent.py  tot_agent.py  vanilla_agent.py
src/synthora/callbacks/: __init__.py  base_handler.py  base_manager.py  output_handler.py  rich_output_handler.py
src/synthora/code_automations/: graph.py
src/synthora/configs/: __init__.py  agent_config.py  base.py  model_config.py  tool_config.py
src/synthora/executors/: base.py  sequential.py
src/synthora/memories/: __init__.py  base.py  full_context_memory.py  list_memory.py  recent_n_memory.py  summary_memory.py
src/synthora/messages/: __init__.py  base.py
src/synthora/models/: __init__.py  azure_chat.py  azure_completion.py  base.py  openai_chat.py  openai_completion.py
src/synthora/prompts/: __init__.py  base.py
src/synthora/prompts/buildin/: cot.py  (+4 more)
src/synthora/retrievers/: base.py
src/synthora/services/: __init__.py  base.py  discord_bot.py  http_service.py  slack_bot.py  slcak_bot.py
src/synthora/toolkits/: __init__.py  base.py  basic_math_toolkit.py  decorators.py  file_toolkit.py  finance.py  news.py  search_toolkit.py  slides.py  weather.py  webpage_toolkit.py
src/synthora/tracers/: __init__.py  base.py  simple_tracer.py
src/synthora/triggers/: __init__.py  apscheduler_trigger.py  base.py  cron_trigger.py  date_trigger.py  time_trigger.py
src/synthora/types/: __init__.py  enums.py  event.py  node.py  openai.py  services.py
src/synthora/utils/: __init__.py  default.py  function_schema.py  image.py  macros.py  pydantic_model.py  yaml_loader.py
src/synthora/workflows/: __init__.py  base_task.py
src/syntropic/: __init__.py
src/syntropic/agents/: __init__.py  base.py
src/syntropic/configs/: __init__.py  agent_config.py  base.py  model_config.py  tool_config.py
src/syntropic/messages/: base.py
src/syntropic/models/: __init__.py  base.py  openai_chat.py
src/syntropic/prompts/: __init__.py  base.py
src/syntropic/toolkits/: __init__.py  base.py  basic_math_toolkit.py  decorators.py  search_toolkit.py
src/syntropic/tracers/: __init__.py
src/syntropic/types/: __init__.py  enums.py
src/syntropic/utils/: __init__.py  function_schema.py  yaml_loader.py
tests/: conftest.py
tests/agents/: test_react_agent.py
tests/memories/: test_base_memory.py  test_full_context_memory.py  test_recent_n_memory.py  test_summary_memory.py
tests/models/: test_openai_chat.py  test_openai_completion.py
tests/prompts/: test_prompt.py  test_prompts.py
tests/toolkits/: test_async_function.py  test_sync_function.py  test_toolkit.py
tests/workflows/: test_contexts.py  test_schedulers.py  test_tasks.py
(+40 files in other folders)
