# LICENSE HEADER MANAGED BY add-license-header
#
# =========== Copyright 2024 @ SYNTROPIX-AI.org. All Rights Reserved. ===========
# Licensed under the Apache License, Version 2.0 (the “License”);
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an “AS IS” BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# =========== Copyright 2024 @ SYNTROPIX-AI.org. All Rights Reserved. ===========
#

[tool.poetry]
name = "synthora"
version = "0.1.1"
description = "Synthora is a lightweight and extensible framework for LLM-driven Agents and ALM research. It provides essential components to build, test and evaluate agents. At its core, Synthora aims to assemble an agent with a single config, thus minimizing your effort in building, tuning, and sharing agents."
authors = ["Your Name <you@example.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.1"
docstring-parser = "^0.16"
asyncio = "^3.4.3"
openai = "^1.55.0"
rich = "^13.9.4"


[tool.poetry.group.quality.dependencies]
black = "^24.10.0"
ruff = "^0.8.0"
pre-commit = "^4.0.1"
mypy = "^1.13.0"
types-pyyaml = "^6.0.12.20240917"
add-license-header = "^2.2.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"
myst-parser = "^4.0.0"
sphinx-rtd-theme = "^3.0.2"
sphinx-book-theme = "^1.1.3"



[tool.poetry.group.toolkits-search.dependencies]
wikipedia = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310']

[tool.ruff.lint]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "W605"]
select = ["C", "E", "F", "I", "W"]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["syntropix"]

[tool.mypy]
strict = true
mypy_path = "."
