[project]
name = "synthora"
version = "0.1.13"
description = "Synthora is a lightweight and extensible framework for LLM-driven Agents and ALM research. It provides essential components to build, test and evaluate agents. At its core, Synthora aims to assemble an agent with a single config, thus minimizing your effort in building, tuning, and sharing agents."
authors = [{ name = "Syntropix.AI" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "pydantic>=2.10.1,<3",
    "docstring-parser>=0.16,<0.17",
    "asyncio>=3.4.3,<4",
    "openai>=1.55.0,<2",
    "rich>=13.9.4,<14",
    "websockets~=14.1",
    "fastapi>=0.115.5,<0.116",
    "python-dotenv>=1.0.1,<2",
    "apscheduler>=3.11.0,<4",
    "pyyaml>=6.0.2,<7",
]

[project.optional-dependencies]
services = [
    "discord-py>=2.4.0,<3",
    "slack-bolt>=1.22.0,<2",
]
toolkits = [
    "googlesearch-python>=1.2.5,<2",
    "trafilatura>=2.0.0,<3",
    "wikipedia>=1.4.0,<2",
    "pymediawiki>=0.7.5,<0.8",
]

[dependency-groups]
quality = [
    "black>=24.10.0,<25",
    "ruff>=0.8.0,<0.9",
    "pre-commit>=4.0.1,<5",
    "mypy>=1.13.0,<2",
    "types-pyyaml>=6.0.12.20240917,<7",
    "add-license-header>=2.2.0,<3",
]
test = [
    "pytest>=8.3.3,<9",
    "pytest-asyncio>=0.25.3,<0.26",
]
dev = [
    "sphinx>=8.1.3,<9",
    "myst-parser>=4.0.0,<5",
    "sphinx-rtd-theme>=3.0.2,<4",
    "sphinx-book-theme>=1.1.3,<2",
    "nbsphinx>=0.9.5,<0.10",
    "nbconvert[webpdf]>=7.16.4,<8",
    "jupyter-sphinx>=0.5.3,<0.6",
    "jupyter>=1.1.1,<2",
    "myst-nb>=1.1.2,<2",
    "pandoc~=2.4",
    "fastapi[standard]>=0.115.5,<0.116",
]

[tool.uv]
default-groups = [
    "quality",
    "test",
    "dev",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["syntropix"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.mypy]
strict = true
mypy_path = "."
